tests/e2e/not_allowed/extends.error
Error: syntax error in story at line 1, column 1

1|    extends = 1
      ^^^^^^^

E0030: `extends` is reserved for future use
